SFDCProject/src/objects/API_Request_Log__c.object
<CustomObject>
    <fields>
        <fullName>External_Created_DateTime__c</fullName>
        <label>External Created DateTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Created_Date__c</fullName>
        <label>External Created Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Sync_System__c</fullName>
        <label>External Sync System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Id__c</fullName>
        <label>Prospect Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_End_Time__c</fullName>
        <label>Request End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request_Start_Time__c</fullName>
        <label>Request Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Ready To Look-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Look-up Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Look-up Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Look-up In Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>HD Lead Look-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HD Lead Error Look-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HD SCE Look-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HD Error Look-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response_Details__c</fullName>
        <label>Response Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Trigger_Time__c</fullName>
        <formula>(Now() -  0.038)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trigger Time</label>
        <type>DateTime</type>
    </fields>
    <label>API Request Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>API Request Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>API Request Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>